Removed definition of what GET methods consume.
